<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/home_scrollView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/background_grey_activity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".MainActivity" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2.0" >

            <Button
                android:id="@+id/button_home_apps"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:layout_marginTop="4dp"
                android:layout_weight="1.0"
                android:background="@drawable/btn_corpus_apps_games"
                android:drawableLeft="@drawable/ic_play_widgets_np_holo_dark"
                android:drawableRight="@drawable/btn_homescreen"
                android:onClick="openContent"
                android:paddingLeft="7dp"
                android:text="@string/title_apps_cap"
                android:textColor="@color/white"
                android:textSize="15dp" />

            <Button
                android:id="@+id/button_home_games"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:layout_marginTop="4dp"
                android:layout_weight="1.0"
                android:background="@drawable/btn_corpus_apps_games"
                android:drawableLeft="@drawable/ic_play_widgets_np_holo_dark"
                android:drawableRight="@drawable/btn_homescreen"
                android:onClick="openContent"
                android:paddingLeft="7dp"
                android:text="@string/title_games_cap"
                android:textColor="@color/white"
                android:textSize="15dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2.0" >

            <Button
                android:id="@+id/button_home_movies"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:layout_marginTop="2dp"
                android:layout_weight="1.0"
                android:background="@drawable/btn_corpus_movies"
                android:drawableLeft="@drawable/ic_menu_market_mymovies"
                android:drawableRight="@drawable/btn_homescreen"
                android:paddingLeft="7dp"
                android:text="@string/title_movies_cap"
                android:textColor="@color/white"
                android:textSize="15dp" />

            <Button
                android:id="@+id/button_home_music"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:layout_marginTop="2dp"
                android:layout_weight="1.0"
                android:background="@drawable/btn_corpus_music"
                android:drawableLeft="@drawable/ic_menu_market_mymusic"
                android:drawableRight="@drawable/btn_homescreen"
                android:paddingLeft="7dp"
                android:text="@string/title_music_cap"
                android:textColor="@color/white"
                android:textSize="15dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2.0" >

            <Button
                android:id="@+id/button_home_books"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:layout_marginTop="2dp"
                android:layout_weight="1.0"
                android:background="@drawable/btn_corpus_books"
                android:drawableLeft="@drawable/ic_menu_market_mybooks"
                android:drawableRight="@drawable/btn_homescreen"
                android:paddingLeft="7dp"
                android:text="@string/title_books_cap"
                android:textColor="@color/white"
                android:textSize="15dp" />

            <Button
                android:id="@+id/button_home_magazines"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:layout_marginTop="2dp"
                android:layout_weight="1.0"
                android:background="@drawable/btn_corpus_mags"
                android:drawableLeft="@drawable/ic_menu_market_mymagazines"
                android:drawableRight="@drawable/btn_homescreen"
                android:paddingLeft="7dp"
                android:text="@string/title_magazines_cap"
                android:textColor="@color/white"
                android:textSize="15dp"
                android:visibility="invisible" />
        </LinearLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="22dp"
            android:adjustViewBounds="true"
            android:src="@drawable/commercial" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="22dp"
            android:text="Recommended for you"
            android:textColor="@color/greyCap"
            android:textSize="21dp"
            android:textStyle="italic" />

        <GridView
            android:id="@+id/home_gridView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:horizontalSpacing="9dp"
            android:numColumns="2"
            android:padding="7dp"
            android:stretchMode="columnWidth"
            android:verticalSpacing="7dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="22dp"
            android:text="Staff Picks"
            android:textColor="@color/greyCap"
            android:textSize="21dp"
            android:textStyle="italic" />

        <GridView
            android:id="@+id/home_gridView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:horizontalSpacing="9dp"
            android:numColumns="3"
            android:padding="7dp"
            android:stretchMode="columnWidth"
            android:verticalSpacing="7dp" />
    </LinearLayout>

</ScrollView>